--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+11/07/2019
+   - Updated libraries, resources and endpoint description.
+
 07/01/2019
    - Updated Jackson databind library.
    - Updated tests' descriptions.
