--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20/11/2020
+  - Fixed parsing error response from KorAP API and updated tests
+  
 20/12/2019
   - Added dynamic acquisition of resource info using KorAP API.
 
