Added institution and improved landingPage.
Change-Id: I32aa136ea935b5b898647de23eb81ccb1752f9c8

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1.0.7-SNAPSHOT
+
+- update libraries including fcs-simple-endpoint 1.8.0
+- add Dockerfile
+- add institution
+- improve landingPageURI with corpus query
+
 1.0.6-SNAPSHOT
 
 2022-10-05
