Handle empty resource description.
Change-Id: I4caa6d751ac2a70a17ee7a68de721423205ddd5e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 1.0.8-SNAPSHOT
 
 - handle resource pid and resolve resources (virtual corpora) using map (#62)
+- handle empty description.
+
 
 1.0.7-SNAPSHOT
 
