Add cache for virtual corpus access (#63).
Change-Id: I2b8ccc1602e12748d33f01791466f34b1abc6caf

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 - handle resource pid and resolve resources (virtual corpora) using map (#62)
 - handle empty description.
+- Add cache for virtual corpus access.
 
 
 1.0.7-SNAPSHOT
