--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,9 @@
 
 - handle resource pid and resolve resources (virtual corpora) using map (#62)
 - handle empty description.
-- Add cache for virtual corpus access.
-
+- Add cache for virtual corpus access.(#63)
+- Implemented search for protected resources by using public metadata search 
+  web-service and adding Diagnostics. (#64)
 
 1.0.7-SNAPSHOT
 
