--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Add cache for virtual corpus access.(#63)
 - Implemented search for protected resources by using public metadata search 
   web-service and adding Diagnostics. (#64)
+- Added support for match-id with signatures. 
 
 1.0.7-SNAPSHOT
 
